fix: Prevent overflow of commit message display

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -177,7 +177,7 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
 .lastcommit {
   width: calc(100%);
 
-  @media screen and (min-width: 768) {
+  @media screen and (min-width: 768px) {
     width: calc(100% - 100px);
   }
 }
